<resources>
    <string name="app_name">GestorFacturas</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="login_usuario">Usuario</string>
    <string name="login_password">Contraseña</string>
    <string name="login_boton_login">Login</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_clientes">Clientes</string>
    <string name="menu_facturas">Facturas</string>
    <string name="menu_idioma">Idioma</string>
    <string name="menu_salir">Salir</string>
    <string name="usuario">Usuario</string>
    <string name="navigation_drawer_open">drawer_open</string>
    <string name="navigation_drawer_close">drawer_close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="adapter_facturas_total">Total</string>
    <string name="espanol">Español</string>
    <string name="ingles">Ingles</string>
    <string name="title_detail_client">Detalle Cliente</string>
    <string name="sendBtn">Enviar</string>
    <string name="formulario_facturas">Formulario facturas</string>
    <string name="fecha_emision">Fecha de emisión</string>
    <string name="total_lbl">Total</string>
    <string name="bienvenido_dashboard">Bienvenido/a Invoice Manager</string>


</resources>